Fixing linux and mac osx file url issue.